src/test/fail/basic_syntax/wrong_arg_type.lly
#[
SyntaxError: Function f, argument #1 is invalid:
Expected Type: integer
Received Type: string
Where: File "wrong_arg_type.lly" at line 8
]#

define f(a: integer) {} f("a")
